--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-.body{
-      margin: 0;
-      font-family: 'Arial', sans-serif;
+body {
+  @apply font-sans;
 }
